smithy-model/src/test/resources/software/amazon/smithy/model/loader/invalid/tagged-literals-invalid-timestamp.smithy
// Invalid RFC 3339 timestamp
$version: "2.1"

namespace smithy.example

structure Foo {
    @default(#timestamp "not-a-date")
    when: Timestamp
}
